fix(formfield): focus border in high contrast mode (#1449)

--- a/projects/ng-aquila/src/formfield/formfield.scss
+++ b/projects/ng-aquila/src/formfield/formfield.scss
@@ -624,7 +624,8 @@ $margin-to-message: nx-spacer(3xs);
   .nx-formfield:not(.nx-formfield--negative):not(.has-error):not(.is-disabled):not(.is-focused):not(.has-outline)
       .nx-formfield__row:hover .nx-formfield__input-container,
   // overwrite error color
-  .nx-formfield.has-error:not(.nx-formfield--negative) .nx-formfield__input-container {
+  .nx-formfield.has-error:not(.nx-formfield--negative) .nx-formfield__input-container,
+  .nx-formfield.has-error:not(.nx-formfield--negative):not(.is-focused) .nx-formfield__input-container {
         border-bottom-color: buttonText;
     }
 
@@ -657,8 +658,12 @@ $margin-to-message: nx-spacer(3xs);
     }
 
     .nx-formfield.is-focused:not(.has-outline) .nx-formfield__input-container,
-    .nx-formfield.is-focused:not(.nx-formfield--negative):not(.has-error) .nx-formfield__input-container {
-        border-bottom-color: highlight;
+    .nx-formfield.is-focused.has-error.nx-formfield.is-floating .nx-formfield__input-container,
+    .nx-formfield.is-focused.nx-formfield--negative:not(.has-error) .nx-formfield__input-container {
+        border-color: buttonText;
+        &::after {
+            background-color: buttonText;
+        }
     }
 
     .nx-formfield:not(.nx-formfield--negative) {
